# BITROT

./: README.md
Project 1/: LICENSE  README.md  index.html
Project 1/css/: main.css
Project 1/cutscenes/: first_night_camp.txt  intro.txt  kidnapping_01.txt  kidnapping_02.txt  kidnapping_03.txt  title.txt
Project 1/docs/: gdd.md  logs.md  narrative.md  pedagogy.md  vision.md
Project 1/frontend/: index.html
Project 1/js/: challenges.js  chapter.js  cutscene.js  dialogue.js  ending.js  input.js  loader.js  mapRenderer.js  (+7 more)
Project 10/: README.md
Project 11/: README.md
Project 12/: README.md
Project 13/: README.md
Project 14/: README.MD
Project 15/: README.md
Project 16/: README.md
Project 17/: README.md
Project 18/: README.md
Project 19/: README.md
Project 2/: README.md
Project 20/: README.md
Project 3/: .gitignore  CMakeLists.txt  README.md
Project 3/include/: inventory_system.h
Project 3/include/auth/: auth.h
Project 3/include/core/: app.h
Project 3/include/database/: database.h
Project 3/include/inventory/: inventory.h
Project 3/include/reports/: reports.h
Project 3/src/: auth.c  database.c  main.c  menu.c
Project 3/src/auth/: auth.c  auth.h
Project 3/src/cli/: menu.c
Project 3/src/core/: app.c  main.c
Project 3/src/database/: database.c
Project 3/src/db/: database.c  database.h
Project 3/src/inventory/: inventory.c  item.c  item.h
Project 3/src/reports/: reports.c
Project 4/: README.md
Project 5/: README.md
Project 6/: README.MD
Project 7/: README.MD
Project 8/: README.md
Project 9/: README.md
(+103 files in other folders)
